--- a/Login.html
+++ b/Login.html
@@ -210,7 +210,7 @@ footer {
 
     <script>
         // IMPORTANT: Replace with your deployed backend URL
-        const API_BASE_URL = 'http://localhost:5000'; // Example: 'http://YOUR_EC2_PUBLIC_IP:5000' or 'https://api.yourdomain.com'
+        const API_BASE_URL = 'http://0.0.0.0:5000'; // Example: 'http://YOUR_EC2_PUBLIC_IP:5000' or 'https://api.yourdomain.com'
 
         document.getElementById('loginForm').addEventListener('submit', async function(event) {
             event.preventDefault();
