--- a/Claimform.html
+++ b/Claimform.html
@@ -214,8 +214,13 @@
     </section>
 
     <script>
-        // IMPORTANT: Replace with your deployed backend URL
-        const API_BASE_URL = 'http://localhost:5000'; // Example: 'http://YOUR_EC2_PUBLIC_IP:5000' or 'https://api.yourdomain.com'
+        // Dynamically determine the API_BASE_URL
+        // This will be 'http://localhost:5000' during local development
+        // and 'http://YOUR_AWS_INSTANCE_IP:5000' or 'https://your.custom.domain:5000' when deployed.
+        // It uses window.location.protocol to get 'http:' or 'https:'
+        // and window.location.hostname to get 'localhost' or your domain/IP.
+        // We still assume the backend is running on port 5000.
+        const API_BASE_URL = `${window.location.protocol}//${window.location.hostname}:5000`;
 
         const form = document.getElementById('claimForm');
         const urlParams = new URLSearchParams(window.location.search);
