--- a/userhome.html
+++ b/userhome.html
@@ -326,7 +326,7 @@
             <h1 id="welcomeUser">Welcome, Guest!</h1>
             <nav>
                 <ul>
-                    <li><a href="/Home">Public Feed</a></li>
+                    <li><a href="/Home" class="active">Public Feed</a></li>
                     <li><a href="/Event">Post Item</a></li>
                     <li><a href="/Submissions.html">My Posts</a></li>
                     <li><a href="#" id="logoutButton">Logout</a></li>
