--- a/userhome.html
+++ b/userhome.html
@@ -370,7 +370,7 @@
 
     <script>
         // IMPORTANT: Replace with your deployed backend URL
-        const API_BASE_URL = 'http://localhost:5000'; // Example: 'http://YOUR_EC2_PUBLIC_IP:5000' or 'https://api.yourdomain.com'
+        const API_BASE_URL = `${window.location.protocol}//${window.location.hostname}:5000`; // Example: 'http://YOUR_EC2_PUBLIC_IP:5000' or 'https://api.yourdomain.com'
 
         let currentUserId = null; // Store the logged-in user's ID globally
 
